--- a/src/styles/Level2.css
+++ b/src/styles/Level2.css
@@ -86,7 +86,7 @@ button:hover {
 }
 
 /* Mensagem de sucesso */
-.success-message {
+.success-message2 {
     background-color: #ffe6f2;
     color: #d63384;
     padding: 20px;
