--- a/src/styles/Level1.css
+++ b/src/styles/Level1.css
@@ -27,7 +27,7 @@ html, body {
 /* Estilo para as cartas */
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     margin: 20px auto;
     width: 100%;
@@ -62,7 +62,7 @@ html, body {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden; /* Esconde a parte de trás */
+
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -131,18 +131,7 @@ p {
         height: 70%;
     }
 }
-.success-message {
-    background-color: #d4edda;
-    color: #155724;
-    padding: 15px 20px;
-    border-radius: 10px;
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    animation: fadeInOut 2s ease-in-out;
-}
+
 
 /* Animação para aparecer/desaparecer */
 @keyframes fadeInOut {
@@ -151,7 +140,7 @@ p {
     90% { opacity: 1; transform: scale(1); }
     100% { opacity: 0; transform: scale(0.9); }
 }
-.success-message {
+.success-message1 {
     background-color: #ffe6f2;
     color: #d63384;
     padding: 20px;
@@ -161,6 +150,7 @@ p {
     font-weight: bold;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
     animation: popIn 0.5s ease, fadeOut 0.5s ease 2.5s forwards; /* Total de 3s */
 }
 
