--- a/src/styles/Level3.css
+++ b/src/styles/Level3.css
@@ -31,7 +31,7 @@
     background-color: #e91e63;
 }
 
-.success-message, .final-message {
+.success-message3, .final-message {
     font-size: 24px;
     color: #d63384;
     margin-top: 20px;
