--- a/src/styles/Level3.css
+++ b/src/styles/Level3.css
@@ -101,7 +101,7 @@ button:hover {
     background-color: #e91e63;
 }
 
-.success-message, .final-message, .location-details {
+.success-message3, .final-message, .location-details {
     font-size: 24px;
     color: #d63384;
     margin-top: 20px;
